--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,6 @@
-########################
-# ENCORE CAPITAL GROUP #
-# COPYRIGHT 2016       #
-# CR TEAM              #
-########################
+
+# Author: Joshua Briceno Zamora
+# Copyright 2017
 
 # JAVA source #
 ###############
