--- a/pom.xml
+++ b/pom.xml
@@ -57,6 +57,28 @@
 			<scope>test</scope>
 		</dependency>
 		<dependency>
+			<groupId>info.cukes</groupId>
+			<artifactId>cucumber-java</artifactId>
+			<version>1.2.5</version>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>info.cukes</groupId>
+			<artifactId>cucumber-testng</artifactId>
+			<version>1.2.2</version>
+		</dependency>
+		<dependency>
+			<groupId>info.cukes</groupId>
+			<artifactId>cucumber-junit</artifactId>
+			<version>1.0.2</version>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.hamcrest</groupId>
+			<artifactId>hamcrest-all</artifactId>
+			<version>1.3</version>
+		</dependency>
+		<dependency>
 			<groupId>org.seleniumhq.selenium</groupId>
 			<artifactId>selenium-java</artifactId>
 			<version>2.52.0</version>
@@ -104,6 +126,9 @@
 					<suiteXmlFiles>
 						<suiteXmlFile>suite.xml</suiteXmlFile>
 					</suiteXmlFiles>
+					<includes>
+						<exclude>**/*CubumberRunner.java</exclude>
+					</includes>
 				</configuration>
 			</plugin>
 			<plugin>
