--- a/pom.xml
+++ b/pom.xml
@@ -64,14 +64,13 @@
 		</dependency>
 		<dependency>
 			<groupId>info.cukes</groupId>
-			<artifactId>cucumber-testng</artifactId>
-			<version>1.2.2</version>
+			<artifactId>cucumber-junit</artifactId>
+			<version>1.2.5</version>
 		</dependency>
 		<dependency>
 			<groupId>info.cukes</groupId>
-			<artifactId>cucumber-junit</artifactId>
-			<version>1.0.2</version>
-			<scope>test</scope>
+			<artifactId>cucumber-testng</artifactId>
+			<version>1.2.2</version>
 		</dependency>
 		<dependency>
 			<groupId>org.hamcrest</groupId>
@@ -121,13 +120,12 @@
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-surefire-plugin</artifactId>
 				<version>2.19.1</version>
-				<inherited>true</inherited>
 				<configuration>
 					<suiteXmlFiles>
 						<suiteXmlFile>suite.xml</suiteXmlFile>
 					</suiteXmlFiles>
 					<includes>
-						<exclude>**/*CubumberRunner.java</exclude>
+						<exclude>**/*CucumberRunner.java</exclude>
 					</includes>
 				</configuration>
 			</plugin>
